[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/cannon.png" type="Texture" id=1]
[ext_resource path="res://entities/player/Turret.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/turret.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5643, 30.7081 )

[node name="Turret" type="RigidBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Arm" type="Sprite" parent="Sprite"]
texture = ExtResource( 1 )

[node name="FirePosition" type="Position2D" parent="Sprite/Arm"]
position = Vector2( 17.4617, 0 )

[node name="VisibilityNotifier2D" type="VisibilityEnabler2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
